--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "demos",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mathgoteasy.com/demos",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "font-awesome": "^4.7.0",
+    "jqwidgets-scripts": "^10.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
